# Meowcrophone

./: .gitignore  meow_classifier.ipynb  ml_audio_classifier_example_for_pico.ipynb  tflite_meow_model.h  tflite_meow_model.tflite  tflite_model.tflite
meowcrophone/: CMakeLists.txt  Makefile  cmake_install.cmake
meowcrophone/anims/: meow_text.c
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/BasicMathFunctions/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/BayesFunctions/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/CommonTables/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/ComplexMathFunctions/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/ControllerFunctions/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/DistanceFunctions/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/FastMathFunctions/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/FilteringFunctions/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/InterpolationFunctions/: Makefile  cmake_install.cmake
meowcrophone/lib/CMSIS_5/CMSIS/DSP/Source/MatrixFunctions/: Makefile  (+1 more)
meowcrophone/lib/pico-ssd1306/: ssd1306.cpp  ssd1306.h
meowcrophone/lib/pico-ssd1306/textRenderer/: 32x64_font.h  TextRenderer.cpp  TextRenderer.h
meowcrophone/lib/pico-tflmicro/: Makefile  cmake_install.cmake
meowcrophone/lib/pico-tflmicro/examples/hello_world/: Makefile  cmake_install.cmake
meowcrophone/lib/pico-tflmicro/examples/keyword_benchmark/: Makefile  cmake_install.cmake
meowcrophone/lib/pico-tflmicro/examples/magic_wand/: Makefile  cmake_install.cmake
meowcrophone/lib/pico-tflmicro/examples/micro_speech/: Makefile  cmake_install.cmake
meowcrophone/lib/pico-tflmicro/examples/person_detection/: Makefile  cmake_install.cmake
meowcrophone/lib/pico-tflmicro/pico-sdk/: Makefile  cmake_install.cmake
meowcrophone/src/: animation_controller.cpp  animation_controller.h  clock_controller.cpp  clock_controller.h  idle.c  idle.h  main.cpp  meow_eye.h  meow_text.h  tflite_model.h
ssd_anim/: CMakeLists.txt  animation_controller.cpp  animation_controller.h  main.cpp
ssd_anim/anims/: eye.c  idle1.c  idle2.c  idle3.c  idle4.c  meow_text (1).c
(+22 files in other folders)
